possibility to create updateURL-less xpi for addons.mozilla.org
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@161 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,7 @@ XPI=${PACKAGE}-${VERSION}.xpi
 xpi: ${XPI}
 
 ${XPI}: install
+	test -z "${NO_UPDATE}" || sed -i -e '/em:updateURL/d' ${xpidir}/install.rdf
 	cd ${xpichromedir} \
 	&& ${ZIP} -r -m ${PACKAGE}.jar */
 	cd ${xpidir} \
