--- a/install.rdf.in
+++ b/install.rdf.in
@@ -9,7 +9,7 @@
   <em:version>@VERSION@</em:version>
   <em:description>Flickr management tool</em:description>
   <em:creator>Klever Group; http://www.klever.net/</em:creator>
-  <em:homepageURL>http://kin.klever.net/</em:homepageURL>
+  <em:homepageURL>http://kin.klever.net/fireflix/</em:homepageURL>
   <em:iconURL>chrome://fireflix/content/icons/32x32/fireflix.png</em:iconURL>
   <em:updateURL>http://kin.klever.net/fireflix/update?v=@VERSION@</em:updateURL>
   <em:aboutURL>chrome://fireflix/content/about.xul</em:aboutURL>
@@ -19,7 +19,7 @@
    <Description>
     <em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
     <em:minVersion>1.5</em:minVersion>
-    <em:maxVersion>1.5.0.7</em:maxVersion>
+    <em:maxVersion>1.5.0.*</em:maxVersion>
    </Description>
   </em:targetApplication>
 
