--- a/update.rdf.in
+++ b/update.rdf.in
@@ -17,7 +17,7 @@
    <Description>
     <em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
     <em:minVersion>1.5</em:minVersion>
-    <em:maxVersion>1.5.0.7</em:maxVersion>
+    <em:maxVersion>1.5.0.*</em:maxVersion>
     <em:updateLink>http://kin.klever.net/dist/@PACKAGE@-@VERSION@.xpi</em:updateLink>
    </Description>
   </em:targetApplication>
