code beauty: moved some code into util.js
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@168 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/content/Makefile.am
+++ b/content/Makefile.am
@@ -2,7 +2,7 @@ xpichromecontent_DATA = \
 	autoconf.dtd \
 	browser.xul about.xul fireflix-panel.xul photoset-props.xul \
 	generated-content.xul \
-	photoset-props.js fireflix.js flickr.js md5.js \
+	photoset-props.js fireflix.js flickr.js util.js md5.js \
 	generated-content.js \
 	fireflix.css \
 	background.jpeg
