added forgotten license file
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@184 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/content/Makefile.am
+++ b/content/Makefile.am
@@ -1,7 +1,7 @@
 xpichromecontent_DATA = \
 	autoconf.dtd \
 	browser.xul about.xul fireflix-panel.xul photoset-props.xul \
-	generated-content.xul \
+	generated-content.xul copying.xul \
 	photoset-props.js fireflix.js flickr.js util.js md5.js \
 	generated-content.js \
 	fireflix.css \
