added brief help file
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@191 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/content/Makefile.am
+++ b/content/Makefile.am
@@ -5,7 +5,8 @@ xpichromecontent_DATA = \
 	photoset-props.js fireflix.js flickr.js util.js md5.js \
 	generated-content.js \
 	fireflix.css \
-	background.jpeg
+	background.jpeg \
+	help.xml
 
 sized_icons = \
 	$(addsuffix .png, \
