--- a/install.rdf.in
+++ b/install.rdf.in
@@ -7,7 +7,7 @@
   <em:id>@MOZ_EXT_ID@</em:id>
   <em:name>Fireflix</em:name>
   <em:version>@VERSION@</em:version>
-  <em:description>Flickr management tool</em:description>
+  <em:description>Sidebar flickr management tool</em:description>
   <em:creator>Klever Group; http://www.klever.net/</em:creator>
   <em:homepageURL>http://kin.klever.net/fireflix/</em:homepageURL>
   <em:iconURL>chrome://fireflix/content/icons/32x32/fireflix.png</em:iconURL>
