added toolbar button picture to Makefile
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@224 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/content/Makefile.am
+++ b/content/Makefile.am
@@ -17,7 +17,8 @@ nobase_xpichromecontent_DATA = \
 	$(addprefix icons/, \
 	 $(addprefix 16x16/,${sized_icons}) \
 	 $(addprefix 32x32/,${sized_icons}) \
-	)
+	) \
+	icons/16x16/toolbar-button.png
 
 EXTRA_DIST = \
 	${xpichromecontent_DATA} ${nobase_xpichromecontent_DATA}
