provisions for signing Signed-off-by: Michael Krelin <hacker@klever.net>

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,11 +11,14 @@ XPI=${PACKAGE}-${VERSION}.xpi
 xpi: ${XPI}
 
 ${XPI}: install
-	test -z "${NO_UPDATE}" || sed -i -e '/em:updateURL/d' ${xpidir}/install.rdf
+	test -z "${NO_UPDATE}" || sed -i -e '/em:update\(URL\|Key\)/d' ${xpidir}/install.rdf
 	cd ${xpichromedir} \
 	&& ${ZIP} -r -m ${PACKAGE}.jar */
 	cd ${xpidir} \
 	&& ${ZIP} -r @abs_builddir@/$@ .
+
+update.rdf: update-template.rdf ${XPI}
+	sed -e "s/<!--SHA1-->/$$(sha1sum ${XPI}|cut -d\  -f1)/" <$< >$@
 
 install-data-local: ${xpidir}/chrome.manifest
 
