--- a/install.rdf.in
+++ b/install.rdf.in
@@ -13,6 +13,7 @@
   <em:iconURL>chrome://fireflix/content/icons/32x32/fireflix.png</em:iconURL>
   <em:updateURL>http://kin.klever.net/fireflix/update?v=@VERSION@</em:updateURL>
   <em:aboutURL>chrome://fireflix/content/about.xul</em:aboutURL>
+  <em:updateKey>MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQDc/WnetE1dTmWKY+KzphLYfqrjOc88fK7FaGSnHbwa4lpvt3gt6W0GwiCjUATvXu9zWoDU60VKPVhN0ohIOAnUuvtqSTfxjDBwDcsRXjg7fg4nofmA2mTeZtULYMymSCYZB+w6krmlOpEBpWZl14yf5Jc93Lc3gCZPDvH0xXZl9QIDAQAB</em:updateKey>
 
   <!-- Firefox -->
   <em:targetApplication>
